Initial commit - SiteForge AI website generator

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0a0a0f" />
-    <meta name="description" content="AI-powered website generator using Claude" />
+    <meta name="description" content="AI-powered website generator using Groq" />
     <title>SiteForge AI – Website Generator</title>
   </head>
   <body>
